# pomegranate

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  main.cpp  setup.bat
assets/: README.md
chione/: CMakeLists.txt  chione.hpp  pch.hpp
chione/debug/: logging.hpp  profiler.cpp  profiler.hpp
chione/maths/: maths.hpp  types.hpp  vector.hpp
chione/platform/: input.cpp  input.hpp  inputEvent.cpp  inputEvent.hpp  platform.cpp  platform.hpp  terminal.hpp  window.cpp  window.hpp
chione/platform/winapi/: terminal.cpp
cmake/: add_embed_files.cmake  add_shader_module.cmake  assign_source_group.cmake  define_filename_macro.cmake  target_add_binary_embed.cmake
docs/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  annotated.html  annotated.js  classes.html  classpom_1_1_application-members.html  classpom_1_1_application.html  classpom_1_1_application.js  classpom_1_1_profiler-members.html  classpom_1_1_profiler.html  classpom_1_1_profiler_timer-members.html  classpom_1_1_profiler_timer.html  classpom_1_1_profiler_timer.js  classpom_1_1_ref-members.html  classpom_1_1_ref.html  classpom_1_1_sprite_renderer-members.html  classpom_1_1_sprite_renderer.html  classpom_1_1_store-members.html  classpom_1_1_store.html  classpom_1_1_store.js  classpom_1_1_timer-members.html  classpom_1_1_timer.html  classpom_1_1_timer.js  classpom_1_1_type-members.html  classpom_1_1_type.html  classpom_1_1_type.js  classpom_1_1_view-members.html  classpom_1_1_view.html  classpom_1_1_window-members.html  classpom_1_1_window.html  classpom_1_1_window.js  classpom_1_1gfx_1_1_buffer-members.html  classpom_1_1gfx_1_1_buffer.html  classpom_1_1gfx_1_1_buffer.js  classpom_1_1gfx_1_1_buffer_vk-members.html  classpom_1_1gfx_1_1_buffer_vk.html  classpom_1_1gfx_1_1_buffer_vk.js  classpom_1_1gfx_1_1_command_buffer-members.html  classpom_1_1gfx_1_1_command_buffer.html  (+181 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  concepts_0.js  enums_0.js  enums_1.js  (+86 more)
examples/: CMakeLists.txt  runtime.cpp
examples/triangle/: CMakeLists.txt  main.cpp
examples/triangle/embed/: triangle.vert  triangle_frag_spv.cpp  triangle_frag_spv.hpp  triangle_vert_spv.cpp  triangle_vert_spv.hpp
pomegranate/: CMakeLists.txt  base.hpp  pch.hpp  pomegranate.cpp  pomegranate.hpp
pomegranate/assets/: assets.cpp  assets.hpp
pomegranate/core/: application.cpp  application.hpp  clientInterface.cpp  clientInterface.hpp  core.cpp  core.hpp  timing.cpp  timing.hpp
pomegranate/debug/: logging.cpp  logging.hpp  profiler.cpp  profiler.hpp
pomegranate/embed/shaders/ibl/: equirectangular_to_cubemap.comp  equirectangular_to_cubemap_comp_spv.cpp  irradiance.comp  irradiance_comp_spv.cpp  prefiltered_envmap_comp_spv.cpp
pomegranate/embed/shaders/spriteRenderer/: spriteRenderer.vert  spriteRenderer_frag_spv.cpp  spriteRenderer_frag_spv.hpp  spriteRenderer_vert_spv.cpp  spriteRenderer_vert_spv.hpp
pomegranate/graphics/: camera.cpp  camera.hpp  color.cpp  color.hpp  environment.cpp  environment.hpp  mesh.cpp  mesh.hpp
pomegranate/graphics/api/: api.hpp
pomegranate/graphics/gfx/: buffer.cpp  buffer.hpp  commandBuffer.cpp  commandBuffer.hpp  context.cpp  context.hpp  descriptorSet.cpp  descriptorSet.hpp  gfx.cpp  gfx.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  pipelineLayout.cpp  pipelineLayout.hpp  renderPass.cpp  renderPass.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
pomegranate/graphics/gfx/vulkan/: bufferVk.cpp  bufferVk.hpp  commandBufferVk.cpp  commandBufferVk.hpp  contextVk.cpp  contextVk.hpp  descriptorSetVk.cpp  descriptorSetVk.hpp  gfxVk.hpp  instanceVk.cpp  instanceVk.hpp  pipelineLayoutVk.cpp  pipelineLayoutVk.hpp  pipelineVk.cpp  pipelineVk.hpp  renderPassVk.cpp  renderPassVk.hpp  shaderVk.cpp  shaderVk.hpp  textureVk.cpp  textureVk.hpp  typesVk.cpp  typesVk.hpp
pomegranate/graphics/renderer/: spriteRenderer.cpp  spriteRenderer.hpp
pomegranate/maths/: maths.hpp  matrix.hpp  types.hpp  vector.hpp
pomegranate/platform/: input.cpp  input.hpp  inputEvent.cpp  inputEvent.hpp  inputTypes.hpp  platform.cpp  platform.hpp  terminal.hpp  window.cpp  window.hpp
pomegranate/platform/winapi/: terminal.cpp
pomegranate/scene/ecs/: archetype.cpp  archetype.hpp  component.hpp  store.cpp  store.hpp  type.hpp  view.hpp
pomegranate/util/: bitflags.hpp  misc.hpp  ref.hpp  slotmap.hpp  util.hpp
runtime/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt  CmakeLists.txt  components.hpp  fireworks.cpp  main.cpp  particle.cpp  pbr.cpp  sandbox.cpp  sky.cpp  space.cpp  spirv-cross-test.cpp  test.cpp
sandbox/embed/: basic.vert  basic_vert_spv.cpp  basic_vert_spv.hpp
sandbox/embed/img/: empty_png.cpp  empty_png.hpp
sandbox/embed/shader/: basic.frag  basic.vert  basic_frag_spv.cpp  basic_frag_spv.hpp  basic_vert_spv.cpp  gradient.comp  gradient_comp_spv.cpp  gradient_comp_spv.hpp  particle.vert  particle_frag_spv.cpp  particle_vert_spv.cpp  plane.frag  plane_frag_spv.cpp  plane_frag_spv.hpp
sandbox/embed/shader/basic/: basic.vert  basic_frag_spv.cpp  basic_vert_spv.cpp
sandbox/embed/shader/ibl/: brdf.comp  brdf_comp_spv.cpp  brdf_comp_spv.hpp  irradiance.comp  irradiance_comp_spv.cpp  irradiance_comp_spv.hpp  prefiltered_envmap.comp  prefiltered_envmap_comp_spv.cpp  prefiltered_envmap_comp_spv.hpp
sandbox/embed/shader/particle/: particle_frag_spv.cpp  (+3 more)
sycamore/: CMakeLists.txt  pch.hpp  sycamore.hpp
sycamore/debug/: logging.hpp  profiler.cpp  profiler.hpp
sycamore/maths/: maths.hpp  vector.hpp
sycamore/platform/: platform.cpp  platform.hpp  terminal.hpp
sycamore/platform/winapi/: platform.cpp  terminal.cpp
test/: CMakeLists.txt  slotmap.cpp  vectors.cpp
(+20 files in other folders)
